# SMASQA

./: .gitignore  LICENSE  README.md  pyproject.toml
data/Amazon-Sales-Case-Study-And-Dashboard/: Amazon_Sales_Dashboard.pbix  Amazon_Sales_Data(SQL Project).sql  README.md  amazon_db_create.py  groundtruth.csv
notebooks/: Amazon example.ipynb
notebooks/.ipynb_checkpoints/: Amazon example-checkpoint.ipynb
scripts/: extractQs.py  hello.py  qs.py
scripts/swarm/: index.py  repl.py
src/smasqa/: index.py
src/smasqa/agents/: agent.py  analyst.py  coder.py  explorer.py  orchestrator.py  sql_agent.py  text_to_sql.py
src/smasqa/eval/: create_sql.py  evaluate.py  evaluate_old.py
src/smasqa/eval/datasets/: batch_1_enriched.csv  batch_2_enriched.csv  batch_3_enriched.csv  business_data_last_version.csv  questions_merged.csv  questions_merged_.csv  stat_data.csv
src/smasqa/eval/datasets/db/: GODREJIND.db  amazon.db  beauty_and_the_labor_market.db  estimated_numbers.db  insurance.db  metabolome.db  test_ave.db  unemployment.db
src/smasqa/eval/results/1 agent - sql - 4o/: merged_results.csv
src/smasqa/eval/results/3 agents - all gpt-4o/: batch_1_results.csv  batch_2_results.csv  batch_3_results.csv  business_data_results.csv  business_data_results1.csv  merged_results.csv
src/smasqa/eval/results/3 agents - o1 orchestrator | 4o-mini agents/: merged_results.csv
src/smasqa/eval/results/temp/: merged_results.csv
