[tool.poetry]
name = "smasqa"
version = "0.1.0"
description = ""
authors = ["Nikita Shishelyakin", "Ivan Tunov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
openai = "^1.55.1"
swarm = { git = "https://github.com/openai/swarm.git" }

[tool.poetry.dev-dependencies]
poethepoet = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
# Simple task
install = "poetry install"

# Run hello world
hello = "python scripts/hello.py"

extractQs = "python scripts/extractQs.py"

#run swarm
swarm = "python scripts/swarm/index.py"
