[tool.poetry]
name = "smasqa"
version = "0.1.0"
description = ""
authors = ["Nikita Shishelyakin", "Ivan Tunov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
openai = "^1.55.1"
pandas = "^1.3.3"
numpy = "^1.21.2"
swarm = { git = "https://github.com/openai/swarm.git" }
tiktoken = "^0.9.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
# Simple task
install = "poetry install"

# Run hello world
hello = "python scripts/hello.py"

extractQs = "python scripts/extractQs.py"

#run swarm
swarm = "python src/smasqa/index.py"

#run evaluation
evaluate = "python src/smasqa/eval/evaluate.py"

#create sql dbs
create_sql = "python src/smasqa/eval/create_sql.py"
